// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render an header 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-end bg-theme-background"
  >
    <div
      class="space-y-4"
    >
      <h1
        class="mb-0 text-4xl"
        data-testid="header__title"
      >
        Header test
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header should render an header with a subtitle 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-end bg-theme-background"
  >
    <div
      class="space-y-4"
    >
      <h1
        class="mb-0 text-4xl"
        data-testid="header__title"
      >
        Header test
      </h1>
      <div
        class="text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header should render an header with extra 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-end bg-theme-background"
  >
    <div
      class="space-y-4"
    >
      <h1
        class="mb-0 text-4xl"
        data-testid="header__title"
      >
        Header test
      </h1>
      <div
        class="text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
    <div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 ePkfgQ"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Extra 1
          </div>
        </button>
        <button
          class="Button__StyledButton-mdtvtf-0 ePkfgQ"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Extra 2
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
